--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input {
 /* Style */
 /*————————————————————————————————*/
 html {
-  height: 100vh;
+  height: 100%;
   background-color: rgb(15, 30, 60);
   background-image: linear-gradient(to top, rgb(10, 20, 40) 0%, rgb(20, 40, 80) 100%);
 }
@@ -37,12 +37,14 @@ input {
   height: 50px;
   border-radius: 25px;
   color: rgb(200, 210, 240);
+  -webkit-text-fill-color: rgb(200, 210, 240);
   background-color: rgb(10, 20, 40);
   font-size: 40px;
 }
 input::placeholder {
   font-family: "Orbitron", sans-serif;
   color: rgb(20, 40, 80);
+  -webkit-text-fill-color: rgb(20, 40, 80);
 }
 form {
   text-align: center;
@@ -51,10 +53,12 @@ form {
   width: 90vw;
 }
 p {
+  word-wrap: break-word;
   overflow-wrap: break-word;
   font-family: "Orbitron", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 40px;
   color: rgb(200, 210, 240);
+  -webkit-text-fill-color: rgb(200, 210, 240);
 }
